Update en.json (POEditor.com)

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -22,6 +22,6 @@
     "Ads Manager": "Ads Manager",
     "Hebrew": "Hebrew",
     "General": "General",
-	"Business Application": "Business Application",
-    "Read More": "Read more"
+    "Business Application": "Business Application",
+    "Read More": "Read More"
 }
