Update he.json (POEditor.com)

--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -1,27 +1,31 @@
 {
-    "Login": "התחברות",
-    "Welcome back, please login to your account.": "ברוכים השבים, התחברו לחשבונכם.",
-    "Email": "אימייל",
-    "Password": "סיסמא",
-    "Forgot Password?": "שכחתי סיסמא",
-    "Register": "צור חשבון",
-    "Visitor profiles": "פרופילי מבקרים",
+    "Login": "",
+    "Welcome back, please login to your account.": "",
+    "Email": "",
+    "Password": "",
+    "Forgot Password?": "",
+    "Register": "",
+    "Visitor profiles": "",
     "Chat": "צ'אט",
-    "Visitors": "משתמשים",
-    "Inbox": "הודעות",
-    "Customization": "התאמה אישית",
-    "Integrations": "אינטגרציות",
-    "Email Marketing": "דיוור אלקטרוני",
-    "Calls": "שיחות",
-    "Forms": "טפסים",
-    "Mailbox": "תיבת מייל",
-    "Knowledge Base": "מדריכי משתמש",
-    "Session Replays": "הקלטת מבקרים",
-    "User Analysis": "אנליטיקות מוצר",
-    "Smart Popups": "פופאפים חכמים",
-    "Ads Manager": "שיווק ממומן",
-    "Hebrew": "עברית",
-    "General": "כללי",
-    "Business Application": "תוכנות עסקיות",
-    "Read More": "קרא עוד"
+    "Visitors": "",
+    "Inbox": "",
+    "Customization": "",
+    "Integrations": "",
+    "Email Marketing": "",
+    "Calls": "",
+    "Forms": "",
+    "Mailbox": "",
+    "Knowledge Base": "",
+    "Session Replays": "",
+    "User Analysis": "",
+    "Smart Popups": "",
+    "Ads Manager": "",
+    "Hebrew": "עִברִית",
+    "General": "",
+    "Business Application": "",
+    "Read More": "",
+    "Hello": "שלום",
+    "menu": {
+        "Chat analytics": "אנליטיקות"
+    }
 }
