Update en.json (POEditor.com)

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -25,5 +25,5 @@
     "Business Application": "Business Application",
     "Read More": "Read More",
     "Hello": "Hello",
-    "Chat analytics": ""
+    "Chat Analytics": ""
 }
