--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -25,5 +25,5 @@
     "Business Application": "",
     "Read More": "",
     "Hello": "שלום",
-    "Chat analytics": "אנליטיקות"
+    "Chat Analytics": "אנליטיקות"
 }
