Update fr.json (POEditor.com)

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -1,27 +1,14 @@
 {
-  "Login": "Login",
-  "Welcome back, please login to your account.": "Welcome back, please login to your account.",
-  "Email": "Email",
-  "Password": "Password",
-  "Forgot Password?": "Forgot Password?",
-  "Register": "Register",
-  "Visitor profiles": "Visitor profiles",
-  "Chat": "Chat",
-  "Visitors": "Visitors",
-  "Inbox": "Inbox",
-  "Customization": "Customization",
-  "Integrations": "Integrations",
-  "Email Marketing": "Email Marketing",
-  "Calls": "Calls",
-  "Forms": "Forms",
-  "Mailbox": "Mailbox",
-  "Knowledge Base": "Knowledge Base",
-  "Session Replays": "Session Replays",
-  "User Analysis": "User Analysis",
-  "Smart Popups": "Smart Popups",
-  "Ads Manager": "Ads Manager",
-  "Hebrew": "Hebrew",
-  "General": "General",
-  "Business Application": "Business Application",
-  "Read More": "Read more"
+    "Chat": "",
+    "Visitors": "",
+    "Inbox": "",
+    "Customization": "",
+    "Email Marketing": "",
+    "Knowledge Base": "",
+    "Hebrew": "",
+    "General": "",
+    "Read More": "",
+    "Chat Analytics": "",
+    "Analytics": "Analytique",
+    "Users": ""
 }
