--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -1,29 +1,14 @@
 {
-    "Login": "",
-    "Welcome back, please login to your account.": "",
-    "Email": "",
-    "Password": "",
-    "Forgot Password?": "",
-    "Register": "",
-    "Visitor profiles": "",
     "Chat": "צ'אט",
     "Visitors": "",
     "Inbox": "",
     "Customization": "",
-    "Integrations": "",
     "Email Marketing": "",
-    "Calls": "",
-    "Forms": "",
-    "Mailbox": "",
     "Knowledge Base": "",
-    "Session Replays": "",
-    "User Analysis": "",
-    "Smart Popups": "",
-    "Ads Manager": "",
     "Hebrew": "עִברִית",
     "General": "",
-    "Business Application": "",
     "Read More": "",
-    "Hello": "שלום",
-    "Chat Analytics": "אנליטיקות"
+    "Chat Analytics": "אנליטיקות",
+    "Analytics": "",
+    "Users": ""
 }
