Update he.json (POEditor.com)

--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -9,6 +9,6 @@
     "General": "",
     "Read More": "",
     "Chat Analytics": "אנליטיקות",
-    "Analytics": "",
+    "Analytics": "אנליטיקות",
     "Users": ""
 }
