Update en.json (POEditor.com)

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -10,5 +10,7 @@
     "Read More": "Read More",
     "Chat Analytics": "",
     "Analytics": "",
-    "Users": ""
+    "Users": "",
+    "Forms": "Forms",
+    "More by Appsy": ""
 }
