Update fr.json (POEditor.com)

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -10,5 +10,7 @@
     "Read More": "",
     "Chat Analytics": "",
     "Analytics": "Analytique",
-    "Users": ""
+    "Users": "",
+    "Forms": "",
+    "More by Appsy": ""
 }
