Update he.json (POEditor.com)

--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -10,5 +10,7 @@
     "Read More": "קרא עוד",
     "Chat Analytics": "אנליטיקות",
     "Analytics": "אנליטיקות",
-    "Users": "משתמשים"
+    "Users": "משתמשים",
+    "Forms": "טפסים",
+    "More by Appsy": ""
 }
