Update en.json (POEditor.com)

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -12,5 +12,9 @@
     "Analytics": "",
     "Users": "",
     "Forms": "Forms",
-    "More by Appsy": ""
+    "More by Appsy": "",
+    "Manage projects": "",
+    "Search visitors": "",
+    "Visitor": "",
+    "Viewed page": ""
 }
