Update fr.json (POEditor.com)

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -12,5 +12,9 @@
     "Analytics": "Analytique",
     "Users": "",
     "Forms": "",
-    "More by Appsy": ""
+    "More by Appsy": "",
+    "Manage projects": "",
+    "Search visitors": "",
+    "Visitor": "",
+    "Viewed page": ""
 }
