Update he.json (POEditor.com)

--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -12,5 +12,9 @@
     "Analytics": "אנליטיקות",
     "Users": "משתמשים",
     "Forms": "טפסים",
-    "More by Appsy": ""
+    "More by Appsy": "אפליקציות נוספות",
+    "Manage projects": "ניהול פרויקטים",
+    "Search visitors": "חיפוש מבקר",
+    "Visitor": "מבקר",
+    "Viewed page": "צפה בדף"
 }
