Update en.json (POEditor.com)

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -16,5 +16,8 @@
     "Manage projects": "",
     "Search visitors": "",
     "Visitor": "",
-    "Viewed page": ""
+    "Viewed page": "",
+    "Type your message": "",
+    "Start Conversation": "",
+    "Send": ""
 }
