Update he.json (POEditor.com)

--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -16,5 +16,8 @@
     "Manage projects": "ניהול פרויקטים",
     "Search visitors": "חיפוש מבקר",
     "Visitor": "מבקר",
-    "Viewed page": "צפה בדף"
+    "Viewed page": "צפה בדף",
+    "Type your message": "הקלד הודעה",
+    "Start Conversation": "בחר שיחה",
+    "Send": "שלח"
 }
