Update en.json (POEditor.com)

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -8,16 +8,28 @@
     "Hebrew": "Hebrew",
     "General": "General",
     "Read More": "Read More",
-    "Chat Analytics": "",
-    "Analytics": "",
-    "Users": "",
+    "Chat Analytics": "Chat Analytics",
+    "Analytics": "Analytics",
+    "Users": "Users",
     "Forms": "Forms",
-    "More by Appsy": "",
-    "Manage projects": "",
-    "Search visitors": "",
-    "Visitor": "",
-    "Viewed page": "",
-    "Type your message": "",
-    "Start Conversation": "",
-    "Send": ""
+    "More by Appsy": "More by Appsy",
+    "Manage projects": "Manage projects",
+    "Search visitors": "Search visitors",
+    "Visitor": "Visitor",
+    "Viewed page": "Viewed page",
+    "Type your message": "Type your message",
+    "Start Conversation": "Start Conversation",
+    "Send": "Send",
+    "Homepage": "Homepage",
+    "Customize homepage": "Customize homepage",
+    "Styling": "Styling",
+    "Customize your style": "Customize your style",
+    "Chatbot": "Chatbot",
+    "Automatic responses": "Automatic responses",
+    "Questions": "Questions",
+    "Frequently asked questions": "Frequently asked questions",
+    "Knowledge base": "Knowledge base",
+    "Suggest tutorials": "Suggest tutorials",
+    "Extra modules": "Extra modules",
+    "Homepage interactions": "Homepage interactions"
 }
