Update fr.json (POEditor.com)

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -19,5 +19,17 @@
     "Viewed page": "",
     "Type your message": "",
     "Start Conversation": "",
-    "Send": ""
+    "Send": "",
+    "Homepage": "",
+    "Customize homepage": "",
+    "Styling": "",
+    "Customize your style": "",
+    "Chatbot": "",
+    "Automatic responses": "",
+    "Questions": "",
+    "Frequently asked questions": "",
+    "Knowledge base": "",
+    "Suggest tutorials": "",
+    "Extra modules": "",
+    "Homepage interactions": ""
 }
