Update he.json (POEditor.com)

--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -19,5 +19,17 @@
     "Viewed page": "צפה בדף",
     "Type your message": "הקלד הודעה",
     "Start Conversation": "בחר שיחה",
-    "Send": "שלח"
+    "Send": "שלח",
+    "Homepage": "דף הבית",
+    "Customize homepage": "התאמת דף הבית",
+    "Styling": "עיצוב",
+    "Customize your style": "התאמת עיצוב",
+    "Chatbot": "צ'טבוט",
+    "Automatic responses": "תגובות אוטומטיות",
+    "Questions": "שאלות",
+    "Frequently asked questions": "שאלות נפוצות",
+    "Knowledge base": "מרכז הדרכה",
+    "Suggest tutorials": "הצעת מדריכים",
+    "Extra modules": "מודולים נוספים",
+    "Homepage interactions": "מודולים לדף הבית"
 }
