Update en.json (POEditor.com)

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -31,5 +31,15 @@
     "Knowledge base": "Knowledge base",
     "Suggest tutorials": "Suggest tutorials",
     "Extra modules": "Extra modules",
-    "Homepage interactions": "Homepage interactions"
+    "Homepage interactions": "Homepage interactions",
+    "Company logo": "",
+    "Main greeting": "",
+    "Secondary greeting": "",
+    "Conversation starter": "",
+    "Start a conversation": "",
+    "Service promise": "",
+    "We typically reply in 5 minutes": "",
+    "Button action": "",
+    "Send us a message": "",
+    "Upload file": ""
 }
