--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -31,5 +31,15 @@
     "Knowledge base": "",
     "Suggest tutorials": "",
     "Extra modules": "",
-    "Homepage interactions": ""
+    "Homepage interactions": "",
+    "Company logo": "",
+    "Main greeting": "",
+    "Secondary greeting": "",
+    "Conversation starter": "",
+    "Start a conversation": "",
+    "Service promise": "",
+    "We typically reply in 5 minutes": "",
+    "Button action": "",
+    "Send us a message": "",
+    "Upload file": ""
 }
