Update he.json (POEditor.com)

--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -31,5 +31,15 @@
     "Knowledge base": "מרכז הדרכה",
     "Suggest tutorials": "הצעת מדריכים",
     "Extra modules": "מודולים נוספים",
-    "Homepage interactions": "מודולים לדף הבית"
+    "Homepage interactions": "מודולים לדף הבית",
+    "Company logo": "לוגו החברה",
+    "Main greeting": "כותרת ראשית",
+    "Secondary greeting": "כותרת משנית",
+    "Conversation starter": "הזמנה לשיחה",
+    "Start a conversation": "התחל שיחה",
+    "Service promise": "הבטחת שירות",
+    "We typically reply in 5 minutes": "עונים לרוב תוך כ5 דקות",
+    "Button action": "כפתור פעולה",
+    "Send us a message": "שלח לנו הודעה",
+    "Upload file": "העלאת קובץ"
 }
