--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -41,5 +41,6 @@
     "We typically reply in 5 minutes": "",
     "Button action": "",
     "Send us a message": "",
-    "Upload file": ""
+    "Upload file": "",
+    "visitor": ""
 }
