Update he.json (POEditor.com)

--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -41,5 +41,6 @@
     "We typically reply in 5 minutes": "עונים לרוב תוך כ5 דקות",
     "Button action": "כפתור פעולה",
     "Send us a message": "שלח לנו הודעה",
-    "Upload file": "העלאת קובץ"
+    "Upload file": "העלאת קובץ",
+    "visitor": "מבקר"
 }
