--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -42,5 +42,21 @@
     "Button action": "",
     "Send us a message": "",
     "Upload file": "",
-    "visitor": ""
+    "visitor": "",
+    "Projects": "",
+    "Manage projects and roles": "",
+    "Team": "",
+    "Manage team members": "",
+    "Account": "",
+    "Manage account profile": "",
+    "Plans": "",
+    "Get more from appsy": "",
+    "Billing": "",
+    "Payments and invoices": "",
+    "Add new project": "",
+    "Setup": "",
+    "With script": "",
+    "OR Install for": "",
+    "Members": "",
+    "Add member": ""
 }
