--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -58,5 +58,8 @@
     "With script": "",
     "OR Install for": "",
     "Members": "",
-    "Add member": ""
+    "Add member": "",
+    "Secret invitation link": "",
+    "Anyone with this secret link can join your project": "",
+    "Accept": ""
 }
