Update en.json (POEditor.com)

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -61,5 +61,6 @@
     "Add member": "",
     "Secret invitation link": "",
     "Anyone with this secret link can join your project": "",
-    "Accept": ""
+    "Accept": "",
+    "Created": ""
 }
