--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -61,5 +61,6 @@
     "Add member": "",
     "Secret invitation link": "",
     "Anyone with this secret link can join your project": "",
-    "Accept": ""
+    "Accept": "",
+    "Created": ""
 }
