Update he.json (POEditor.com)

--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -61,5 +61,6 @@
     "Add member": "הוסף חבר צוות",
     "Secret invitation link": "שליחת לינק סודי",
     "Anyone with this secret link can join your project": "כל משתמש עם הלינק יוכל להצטרף לפרויקט",
-    "Accept": "שלח"
+    "Accept": "שלח",
+    "Created": "נוצר ב"
 }
