Update en.json (POEditor.com)

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -62,5 +62,6 @@
     "Secret invitation link": "",
     "Anyone with this secret link can join your project": "",
     "Accept": "",
-    "Created": ""
+    "Created": "",
+    "Just now": ""
 }
