--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -62,5 +62,6 @@
     "Secret invitation link": "",
     "Anyone with this secret link can join your project": "",
     "Accept": "",
-    "Created": ""
+    "Created": "",
+    "Just now": ""
 }
