Update he.json (POEditor.com)

--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -62,5 +62,6 @@
     "Secret invitation link": "שליחת לינק סודי",
     "Anyone with this secret link can join your project": "כל משתמש עם הלינק יוכל להצטרף לפרויקט",
     "Accept": "שלח",
-    "Created": "נוצר ב"
+    "Created": "נוצר ב",
+    "Just now": "הרגע"
 }
