Update he.json (POEditor.com)

--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -63,5 +63,5 @@
     "Anyone with this secret link can join your project": "כל משתמש עם הלינק יוכל להצטרף לפרויקט",
     "Accept": "שלח",
     "Created": "נוצר ב",
-    "Just now": "הרגע"
+    "Just now": "ברגע זה"
 }
