Update en.json (POEditor.com)

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -63,5 +63,6 @@
     "Anyone with this secret link can join your project": "",
     "Accept": "",
     "Created": "",
-    "Just now": ""
+    "Just now": "",
+    "Sent a chat message": ""
 }
