--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -63,5 +63,6 @@
     "Anyone with this secret link can join your project": "",
     "Accept": "",
     "Created": "",
-    "Just now": ""
+    "Just now": "",
+    "Sent a chat message": ""
 }
