--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -63,5 +63,6 @@
     "Anyone with this secret link can join your project": "כל משתמש עם הלינק יוכל להצטרף לפרויקט",
     "Accept": "שלח",
     "Created": "נוצר ב",
-    "Just now": "ברגע זה"
+    "Just now": "ברגע זה",
+    "Sent a chat message": "שלח הודעת צ'אט"
 }
