--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -64,5 +64,17 @@
     "Accept": "",
     "Created": "",
     "Just now": "",
-    "Sent a chat message": ""
+    "Sent a chat message": "",
+    "Last seen": "",
+    "Number of visits": "",
+    "Average session": "",
+    "show more...": "",
+    "Enter name...": "",
+    "Name": "",
+    "Enter email...": "",
+    "Email": "",
+    "Enter phone...": "",
+    "Phone": "",
+    "Enter address...": "",
+    "Address": ""
 }
