--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -76,5 +76,9 @@
     "Enter phone...": "",
     "Phone": "",
     "Enter address...": "",
-    "Address": ""
+    "Address": "",
+    "Visiting data": "",
+    "Contact information": "",
+    "Company details": "",
+    "Chat history": ""
 }
