Update he.json (POEditor.com)

--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -76,5 +76,9 @@
     "Enter phone...": "הכנס טלפון...",
     "Phone": "טלפון",
     "Enter address...": "הכנס כתובת...",
-    "Address": "כתובת"
+    "Address": "כתובת",
+    "Visiting data": "מידע על ביקורים",
+    "Contact information": "פרטי יצירת קשר",
+    "Company details": "מידע על החברה",
+    "Chat history": "היסטוריית צ'אט"
 }
