--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -80,5 +80,12 @@
     "Visiting data": "",
     "Contact information": "",
     "Company details": "",
-    "Chat history": ""
+    "Chat history": "",
+    "Left": "",
+    "Right": "",
+    "Primary color": "",
+    "Chat side": "",
+    "Open chat icon": "",
+    "Appsy branding": "",
+    "Start open": ""
 }
