Update he.json (POEditor.com)

--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -80,5 +80,12 @@
     "Visiting data": "מידע על ביקורים",
     "Contact information": "פרטי יצירת קשר",
     "Company details": "מידע על החברה",
-    "Chat history": "היסטוריית צ'אט"
+    "Chat history": "היסטוריית צ'אט",
+    "Left": "שמאל",
+    "Right": "ימין",
+    "Primary color": "צבע עיקרי",
+    "Chat side": "צד הצ'אט",
+    "Open chat icon": "אייקון פתיחת צ'אט",
+    "Appsy branding": "מיתוג Appsy",
+    "Start open": "התחל פתוח"
 }
