--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -87,5 +87,13 @@
     "Chat side": "",
     "Open chat icon": "",
     "Appsy branding": "",
-    "Start open": ""
+    "Start open": "",
+    "Select": "",
+    "New flow name": "",
+    "Flows": "",
+    "Add new flow": "",
+    "Delete current flow": "",
+    "Rename current flow": "",
+    "No condition": "",
+    "Reload flow": ""
 }
