Update en.json (POEditor.com)

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -95,5 +95,9 @@
     "Delete current flow": "",
     "Rename current flow": "",
     "No condition": "",
-    "Reload flow": ""
+    "Reload flow": "",
+    "Welcome back": "",
+    "Sign in to continue": "",
+    "Continue with Google": "",
+    "Continue with Facebook": ""
 }
