--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -99,5 +99,12 @@
     "Welcome back": "",
     "Sign in to continue": "",
     "Continue with Google": "",
-    "Continue with Facebook": ""
+    "Continue with Facebook": "",
+    "Settings": "",
+    "Display name": "",
+    "Notifications": "",
+    "Language": "",
+    "On any update": "",
+    "Moderate": "",
+    "Off": ""
 }
