Update he.json (POEditor.com)

--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -106,5 +106,6 @@
     "Language": "שפה",
     "On any update": "בכל עדכון",
     "Moderate": "באופן מתון",
-    "Off": "כבוי"
+    "Off": "כבוי",
+    "We run on Appsy": "מוצר מבית Appsy"
 }
